--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -3,20 +3,20 @@
 /* ----------------------------- */
 
 /* component structure */
-.cd44-collapser {
+.ds44-collapser {
   list-style: none; // if collapser is a list
   padding: 0;
   margin: 2rem 0 4rem 0;
-  border-top: 1px solid $cd44-mid-color;
+  border-top: 1px solid $ds44-mid-color;
 }
 
 /* container for collapsed content */
-.cd44-collapser_element {
-  border-bottom: 1px solid $cd44-mid-color;
+.ds44-collapser_element {
+  border-bottom: 1px solid $ds44-mid-color;
 }
 
 /* row-like button */
-.cd44-collapser_button {
+.ds44-collapser_button {
   font-size: 1.6rem;
   padding: 1.5rem 3.5rem 1.5rem 1.5rem;
   display: block;
@@ -43,18 +43,18 @@
 
 }
 
-.cd44-collapser_content {
+.ds44-collapser_content {
   padding: 0 3rem;
-  background-color: $cd44-light-bg;
+  background-color: $ds44-light-bg;
   transition: all 0.4s ease-in-out;
   max-height: 0;
   overflow: hidden;
 }
-.show + .cd44-collapser_content {
-  padding: 3rem; // this value is connected to the component JS, changing it results in changing the calculated value of the height in cd44-collapser.js
+.show + .ds44-collapser_content {
+  padding: 3rem; // this value is connected to the component JS, changing it results in changing the calculated value of the height in ds44-collapser.js
 }
 
-.cd44-collapser_content--links {
+.ds44-collapser_content--links {
   text-decoration: $link-list-decoration;
   padding: 2rem 2rem 2rem 0;
   display: block;
@@ -77,13 +77,13 @@
 
 @media (max-width: $small) {
   
-  .cd44-collapser_content {
+  .ds44-collapser_content {
     padding: 0 1rem;
   }
-  .show + .cd44-collapser_content {
+  .show + .ds44-collapser_content {
     padding: 1rem;
   }
-  .cd44-collapser_content--links {
+  .ds44-collapser_content--links {
     padding: 1rem 2rem 1rem 0;
   }
 
