--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -21,10 +21,11 @@
 
 // KNACSS Libraries
 
-@import "./node_modules/knacss/sass/_library/print";        // print quick reset
-@import "./node_modules/knacss/sass/_library/utilities";    // width and spacer helpers
-//@import "_library/responsive";   // Responsive Web Design helpers
-//@import "./node_modules/knacss/sass/_library/layout";       // alignment, modules, positionning
+@import "./node_modules/knacss/sass/_library/print";                // print quick reset
+@import "./node_modules/knacss/sass/_library/utilities";            // width and spacer helpers
+@import "./node_modules/knacss/sass/_library/grillade-grid.scss";   // Grid System 
+//@import "_library/responsive";                                    // Responsive Web Design helpers
+//@import "./node_modules/knacss/sass/_library/layout";             // alignment, modules, positionning
 
 // KNACSS modified Libraries
 
