Modifications de la variable H6 (niveau hiérarchique qui n'est pas utilisé dans le DS44) pour s'en servir de référentiel pour les chapôs. Suite des travaux sur la première tuile.

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -140,12 +140,17 @@ h6, .h6-like {
   font-weight: $weight-medium;
 }
 
+.chapo, .chapo-like {
+  @include font-size(h6);
+  @if variable_exists(font-family-headings) and $font-family-headings != $font-family-base{
+    font-family: $font-family-headings;
+  }
+  background: transparent;
+  font-weight: $weight-bold;
+}
+
 /* Texts */
 
-.chapo {
-  font-weight: 700;
-  font-size: 1.7rem; // 17px
-}
 figcaption {
   font-size: 1.4rem;
   color: $color-soft-text;
