--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -1,8 +1,41 @@
+// Card common styles
+
+.card {
+
+    margin: 50px; // à supprimer une fois le composant terminé
+
+    transition-duration: $ds44-timing-standard;
+    transition-property: box-shadow, transform;
+    transition-timing-function: ease;
+
+    &:focus,
+    &:hover,
+    &:active {
+        box-shadow: 0px 13px 20px 0px rgba(0,0,0,0.35);
+        transform: scale(1.01); 
+    }
+
+}
+.card__section {
+    padding: 5px 1.4rem;
+    background-color: $ds44-lightgray;
+    font-size: 1.3rem; // 13px
+}
+.card__globalLink { 
+
+    text-decoration: none;
+    
+    &:focus,
+    &:hover,
+    &:active {
+        text-decoration: none;
+    }
+}
 .card__title {
     margin: 0;
     padding: 0;
 }
-.card__section {
-    padding: 5px 1.4rem;
-}
+
+// Vertical card with picture specific styles
+
 
