--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -175,7 +175,7 @@ ul,
 dl,
 blockquote {
   margin-top: 0;
-  margin-bottom: $paragraph-margin-bottom;
+  margin-bottom: $ds44-paragraph-margin-bottom;
 }
 
 /* Avoid margins on nested elements */
