--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -106,9 +106,10 @@ $white                  : #fff !default;
 $ds44-gray              : #666 !default;
 $ds44-lightgray         : #F5F5F5 !default;
 $ds44-iceblue           : #99E6D1 !default;
-$ds44-yellow            : #FFD883 !default;
+$ds44-yellow            : #FFD883 !default; // JVI REM : rename this var with context (website name)
 $ds44-flat-overlay      : rgba(0, 0, 0, 0.4) !default;
 $black                  : #000 !default;
+
 .ds44-overlay { // JVI REM : need to find how to embed this gradient in a variable SASS
   /* Permalink to edit this gradient: https://colorzilla.com/gradient-editor/#ffffff+33,ffffff+33,000000+77&0+33,0.8+77,0.8+77 */
   background: -moz-linear-gradient(top, rgba(255,255,255,0) 33%, rgba(0,0,0,0.8) 77%); /* FF3.6-15 */
@@ -143,7 +144,7 @@ $color-inverse            : $white !default;          // for CD44 texts over dar
 $color-dark-text          : $black !default;          // for CD44 standard texts over light backgrounds
 $color-soft-text          : $ds44-gray !default;      // for CD44 light texts (legends, captions etc.)
 $ds44-mid-color           : $ds44-iceblue !default;   // for CD44 cold colored elements
-$ds44-light-color         : $ds44-yellow !default;    // for CD44 light colored elements
+$ds44-light-color         : $white !default;          // for CD44 light colored elements
 $ds44-light-bg            : $ds44-lightgray !default; // for CD44 light backgrounds
 
 $color-muted              : $gray-200 !default;       // Knacss colors for buttons (to be adapted later)
