--- a/framework/scss/components/_card.scss
+++ b/framework/scss/components/_card.scss
@@ -2,7 +2,7 @@
 
 .card {
 
-    margin: 50px; // à supprimer une fois le composant terminé
+    margin: 50px; // JVI REM : à supprimer une fois le composant terminé
 
     transition-duration: $ds44-timing-standard;
     transition-property: box-shadow, transform;
@@ -10,7 +10,7 @@
 
     &:focus,
     &:hover,
-    &:active {
+    &:active { // JVI REM :il manque la gestion de la flèche qui doit apparaître au survol (en attente de la webfont de Julien R.)
         box-shadow: 0px 13px 20px 0px rgba(0,0,0,0.35);
         transform: scale(1.01); 
     }
@@ -20,6 +20,9 @@
     padding: 5px 1.4rem;
     background-color: $ds44-lightgray;
     font-size: 1.3rem; // 13px
+}
+.card--darkContext .card__section {
+    background-color: $ds44-light-color;
 }
 .card__globalLink { 
 
