--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -46,23 +46,9 @@ body {
   padding: 0 $ds44-container-hmargin;
 }
 .ds44-inner-container {
-  margin: $ds44-container-vmargin;
-}
-
-/* xx-large screens */
-/* ---------------- */
-
-@media (min-width: ($ds44-max-size+$ds44-container-hmargin) ) { // larger viewport + margin
-
-  /* layout for high resolution
-     when viewport is too large, limits size of the inner container and centers content
-     */
-
-  .ds44-inner-container {
-    width: $ds44-max-size;
-    margin: 0 auto;
-  }
-
+  margin: $ds44-container-vmargin auto;
+  padding: 0 $ds44-container-hmargin;
+  max-width:$ds44-max-size;
 }
 
 /* Links */
@@ -189,9 +175,10 @@ ul ul {
   margin-bottom: 0;
 }
 
-/* Remove bullets for lists */
+/* Remove bullets and padding for lists */
 ol, ul {
   list-style: none;
+  padding-left: 0;
 }
 
 /* Max values */
@@ -211,10 +198,6 @@ img {
 }
 
 /* Styling elements */
-ul,
-ol {
-  padding-left: 2em;
-}
 
 img {
   vertical-align: middle;
