Ajout de l'import du fichier scss du template, ajout d'une image pour créer l'effet overlay sur les image des titres, mise à jour des scss pour le template type "page carrefour".

--- a/docs/_variations/templates/template-entryMenu.html
+++ b/docs/_variations/templates/template-entryMenu.html
@@ -18,7 +18,7 @@ layout: pattern
 				<img src="../../assets/images/ds44-logo--sampleImg--tpl.png" alt="image" style="width: 100%;" />
 			</picture>
 			<div class="ds44-titleImageContainer">
-				<h1 class="h1-like">Page main title</h1>
+				<h1 class="h1-like ds44-titleImage">Page main title</h1>
 				<ul class="ds44-breadcrumb">
 					<li>Breadcrumb</li>
 				</ul>
