--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -58,3 +58,4 @@
 @import "components/collapser";
 @import "components/card";
 @import "components/diaporama";
+@import "components/templates.scss";
