--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -80,9 +80,13 @@ $headings-margin-bottom       : $margin-bottom-base /2 !default;
 $paragraph-margin-bottom      : $margin-bottom-base /2 !default;
 $ds44-container-vmargin       : $margin-bottom-base *5 !default;
 $ds44-paragraph-margin-bottom : $margin-bottom-base /2 !default;
+$ds44-components-vmargin      : $margin-bottom-base *3 !default;
 
 $ds44-container-hmargin  : 5.5% !default;
 $ds44-portlet-vmargins   : 3rem !default;
+
+
+$ds44-padding-base       : 3rem !default;
 $spacer-tiny             : .5rem  !default;
 $spacer-tiny-plus        : .7rem !default;
 $spacer-small            : 1rem !default;
