--- a/docs/_variations/templates/template-entryMenu.html
+++ b/docs/_variations/templates/template-entryMenu.html
@@ -34,6 +34,10 @@ layout: pattern
 			<aside class="col-4"><img src="../../assets/images/ds44-logo--sampleImg--column.png" alt="column" style="width: 100%;" /></aside>
 		</div>
 	</section>
+
+	<section class="ds44-inner-container">
+		<img src="../../assets/images/ds44-logo--sampleImg--columnH.png" alt="column" style="width: 100%;" />
+	</section>
 	
 </main>
 
