--- a/docs/_variations/templates/template-entryMenu.html
+++ b/docs/_variations/templates/template-entryMenu.html
@@ -13,7 +13,7 @@ layout: pattern
 
 	<section class="ds44-container-fluid">
 
-		<header class="ds44-pageHeaderContainer">
+		<header class="ds44-pageHeaderContainer ds44-pageHeaderContainer--noPicture">
 			<picture class="ds44-pageHeaderContainer__pictureContainer">
 				<img src="../../assets/images/ds44-logo--sampleImg--tpl.png" alt="image" style="width: 100%;" />
 			</picture>
@@ -27,20 +27,38 @@ layout: pattern
 		
 	</section>
 
-	<section class="ds44-inner-container">
-		<div class="grid-12-small-1">
-			<div class="col-7"><img src="../../assets/images/ds44-logo--sampleImg--column.png" alt="column" style="width: 100%;" /></div>
-			<div class="col-1 grid-offset"></div>
-			<aside class="col-4"><img src="../../assets/images/ds44-logo--sampleImg--column.png" alt="column" style="width: 100%;" /></aside>
+	<section class="ds44-container-fluid">
+		<div class="ds44-inner-container">
+			<div class="grid-12-small-1">
+				<div class="col-7">
+					<img src="../../assets/images/ds44-logo--sampleImg--column.png" alt="column" style="width: 100%;" />
+				</div>
+				<div class="col-1 grid-offset"></div>
+				<aside class="col-4">
+					<img src="../../assets/images/ds44-logo--sampleImg--column.png" alt="column" style="width: 100%;" />
+				</aside>
+			</div>
 		</div>
 	</section>
 
-	<section class="ds44-inner-container">
-		<img src="../../assets/images/ds44-logo--sampleImg--columnH.png" alt="column" style="width: 100%;" />
+	<section class="ds44-container-fluid ds44-alternate-container">
+		<div class="ds44-inner-container">
+			<img src="../../assets/images/ds44-logo--sampleImg--columnH.png" alt="column" style="width: 100%;" />
+		</div>
+	</section>
+
+	<section class="ds44-container-fluid">
+		<div class="ds44-inner-container">
+			<img src="../../assets/images/ds44-logo--sampleImg--columnH.png" alt="column" style="width: 100%;" />
+		</div>
 	</section>
 	
 </main>
 
-<footer class="ds44-container-fluid">
-	<img src="../../assets/images/ds44-logo--sampleImg--footer.png" alt="footer" style="width: 100%;" />
+<footer>
+	<section class="ds44-container-fluid">
+		<div class="ds44-inner-container">
+			<img src="../../assets/images/ds44-logo--sampleImg--footer.png" alt="footer" style="width: 100%;" />
+		</div>
+	</section>
 </footer>
