--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -46,9 +46,12 @@ body {
   padding: 0 $ds44-container-hmargin;
 }
 .ds44-inner-container {
-  margin: $ds44-container-vmargin auto;
-  padding: 0 $ds44-container-hmargin;
+  margin: 0 auto;
+  padding: $ds44-container-vmargin $ds44-container-hmargin;
   max-width:$ds44-max-size;
+}
+.ds44-alternate-container {
+  background-color: $ds44-light-bg;
 }
 
 /* Links */
@@ -130,7 +133,7 @@ h6, .h6-like {
   color: $ds44-light-color;
 }
 
-.chapo, .chapo-like {
+.ds44-introduction, .ds44-introduction-like {
   @include font-size(h6);
   @if variable_exists(font-family-headings) and $font-family-headings != $font-family-base{
     font-family: $font-family-headings;
