--- a/docs/_variations/templates/template-entryMenu.html
+++ b/docs/_variations/templates/template-entryMenu.html
@@ -13,13 +13,13 @@ layout: pattern
 
 	<section class="ds44-container-fluid">
 
-		<header class="ds44-pageHeaderContainer ds44-pageHeaderContainer--noPicture">
+		<header class="ds44-pageHeaderContainer">
 			<picture class="ds44-pageHeaderContainer__pictureContainer">
 				<img src="../../assets/images/ds44-logo--sampleImg--tpl.png" alt="image" style="width: 100%;" />
 			</picture>
-			<div class="ds44-titleImageContainer">
-				<h1 class="h1-like ds44-titleImage">Page main title</h1>
-				<ul class="ds44-breadcrumb">
+			<div class="ds44-titleContainer">
+				<h1 class="h1-like ds44-text--colorInvert">Page main title with image</h1>
+				<ul class="ds44-breadcrumb ds44-text--colorInvert">
 					<li>Breadcrumb</li>
 				</ul>
 			</div>
