--- a/docs/_layouts/pattern.html
+++ b/docs/_layouts/pattern.html
@@ -19,7 +19,7 @@
   
 </head>
 <body class="body">
-  <div class="container-fluid">
+  <div class="container-fluid" style="padding: 3rem;">
       {{ content }}
   </div>
 
