--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -38,6 +38,7 @@ body {
   color: $color-base;
   font-family: $font-family-base;
   line-height: $line-height-base;
+  font-size: 1rem;
 }
 
 /* Main structure */
@@ -161,7 +162,7 @@ h6, .h6-like {
 
 figcaption {
   font-size: 1.4rem;
-  color: $color-soft-text;
+  color: $ds44-color-soft-text;
 }
 
 /* Vertical rythm */
@@ -301,4 +302,12 @@ figure {
 
 .ds44-darkContext {
   background-color: $ds44-color-inverse;
+}
+.ds44-flex-container {
+  display: flex;
+  flex-direction: row;
+}
+.ds44-flex-container--column {
+  display: flex;
+  flex-direction: column;
 }
