--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -14,6 +14,7 @@
 
 // CD44 config
 @import "_config/variables";
+@import "_config/mixins";
 
 /* -------------------------------*/
 /* ------ - 2 - Libraries ------- */
