--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -22,39 +22,42 @@ $ds44-font-family-base      : Muli, sans-serif;             // texts standard fo
 $ds44-font-family-headings  : "Blogger Sans", sans-serif;   // font for h1, h2.. h6
 $ds44-font-family-monospace : consolas, courier, monospace; // font for code and samples
 
-// Font sizes (1.6rem value is "16px" equivalent)
-$ds44-font-size-base : 1rem !default;
+// Font sizes (1rem value is "10px" equivalent)
+$ds44-font-size-base : 1.6em !default;
 
 $ds44-font-sizes: (
   base: (
-    mobile  : $ds44-font-size-base,
-    desktop : $ds44-font-size-base
+    mobile  : .875em, // 14px
+    desktop : $ds44-font-size-base // 16px
   ),
   h1: (
-    mobile  : 3.4em,
-    desktop : 6em
+    mobile  : 2.125em, // 34px
+    desktop : 3.75em   // 60px
   ),
   h2: (
-    mobile  : 2.8em,
-    desktop : 3.8em
+    mobile  : 1.75em,  // 28px
+    desktop : 2.375em  // 38px
   ),
   h3: (
-    mobile  : 2.1em,
-    desktop : 2.8em
+    mobile  : 1.3125em,// 21px
+    desktop : 1.75em   // 28px
   ),
   h4: (
-    mobile  : 1.9em,
-    desktop : 2.4em
+    mobile  : 1.1875em,// 19px
+    desktop : 1.5em    // 24px
   ),
   h5: (
-    mobile  : 1.8em,
-    desktop : 2em
+    mobile  : 1.125em, // 18px
+    desktop : 1.25em   // 20px
   ),
   h6: (
-    mobile  : 1.7em,
-    desktop : 1.7em
+    mobile  : 1.0625em,// 17px
+    desktop : 1.0625em // 17px
   )
 ) !default;
+
+// Line heights
+$ds44-line-height-base : 1.4 !default;
 
 
 $ds44-margin-bottom-base      : 3rem !default;
