--- a/framework/scss/_config/_mixins.scss
+++ b/framework/scss/_config/_mixins.scss
@@ -1,6 +1,6 @@
 // font-size Mixin
 // compiles to font-size mobile + font-size desktop on small-plus devices
-// ex. h2 { @include font-size(h2);}
+// ex. h2 { @include ds44-font-size(h2);}
 @mixin ds44-font-sizes($elem) {
   $q: map-get($ds44-font-sizes, $elem);
   $mob: map-get($q, "mobile");
@@ -8,17 +8,6 @@
   font-size: $mob;
   @include respond-to("small-up") {
     font-size: $desk;
-  }
-}
-
-// Grid Mixin
-// arguments are : columns number, gutter, min-breakpoint
-// ex. .ingrid { @include grid(4, 1rem, 640px); }
-@mixin grid($number:1, $gutter:0, $breakpoint:0) {
-  @media (min-width: $breakpoint) {
-    display: grid;
-    grid-template-columns: repeat($number, 1fr);
-    grid-gap: $gutter;
   }
 }
 
@@ -37,20 +26,3 @@ $bp-aliases: (
   'extra-large-up' : (min-width: #{$ds44-extra-large}),
   'retina' : (min-resolution: 2dppx)
 );
-
-// Source : https://www.sitepoint.com/managing-responsive-breakpoints-sass/
-@mixin respond-to($name) {
-  // If the key exists in the map
-  @if map-has-key($bp-aliases, $name) {
-    // Prints a media query based on the value
-    @media #{inspect(map-get($bp-aliases, $name))} {
-      @content;
-    }
-  }
-
-  // If the key doesn't exist in the map
-  @else {
-    @warn "Unfortunately, no value could be retrieved from `#{$breakpoint}`. "
-        + "Please make sure it is defined in `$breakpoints` map.";
-  }
-}
