Tuile horizontale terminée

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -302,7 +302,7 @@ figure {
   --- */
 
 .ds44-darkContext {
-  background-color: $ds44-color-inverse;
+  background-color: $ds44-color-inverse!important;
 }
 
 /* Flex utils */
