--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -88,14 +88,14 @@ $ds44-lightgray         : #F5F5F5 !default;
 $ds44-LA                : #99E6D1 !default;
 $ds44-Agenda            : #FFD883 !default;
 $ds44-flat-overlay      : rgba(0, 0, 0, 0.4) !default;
-$ds44-color-soft-text   : #333;
+$ds44-color-soft-text   : #333 !default;
 
 // Semantic colors
-$ds44-color-inverse       : $ds44-light !default;          // for CD44 texts over dark backgrounds
-$ds44-color-dark-text     : $ds44-dark !default;          // for CD44 standard texts over light backgrounds
+$ds44-color-inverse       : $ds44-light !default;     // for CD44 texts over dark backgrounds
+$ds44-color-dark-text     : $ds44-dark !default;      // for CD44 standard texts over light backgrounds
 $ds44-color-soft-text     : $ds44-gray !default;      // for CD44 light texts (legends, captions etc.)
 $ds44-mid-color           : $ds44-LA !default;        // for CD44 cold colored elements
-$ds44-light-color         : $ds44-light !default;          // for CD44 light colored elements
+$ds44-light-color         : $ds44-light !default;     // for CD44 light colored elements
 $ds44-light-bg            : $ds44-lightgray !default; // for CD44 light backgrounds
 
 $ds44-color-base      : $ds44-dark !default;
