Modification de naming de la couleur thématique LA

--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -7,12 +7,12 @@
   list-style: none; // if collapser is a list
   padding: 0;
   margin: 2rem 0 4rem 0;
-  border-top: 1px solid $ds44-mid-color;
+  border-top: 1px solid $ds44-LA-color;
 }
 
 /* container for collapsed content */
 .ds44-collapser_element {
-  border-bottom: 1px solid $ds44-mid-color;
+  border-bottom: 1px solid $ds44-LA-color;
 }
 
 /* row-like button */
