Début des travaux sur les encadrés, tentative de correction d'une entrée "form" étrange dans le menu (échec).

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -309,6 +309,12 @@ figure {
   background-color: $ds44-color-inverse!important;
 }
 
+/* Thematic colors */
+
+.ds44-theme--LA {
+  background-color: $ds44-LA;
+}
+
 /* Flex utils */
 
 .ds44-flex-container {
