Ajout des couleurs thématiques pour LA et Aganda

--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -99,6 +99,7 @@ $ds44-color-inverse     : $ds44-light !default;     // for CD44 texts over dark 
 $ds44-color-dark-text   : $ds44-dark !default;      // for CD44 standard texts over light backgrounds
 $ds44-color-soft-text   : $ds44-gray !default;      // for CD44 light texts (legends, captions etc.)
 $ds44-LA-color          : $ds44-LA !default;        // for CD44 colored elements
+$ds44-agenda-color      : $ds44-Agenda !default;    // for CD44 agenda website
 $ds44-light-color       : $ds44-light !default;     // for CD44 light colored elements
 $ds44-light-bg          : $ds44-lightgray !default; // for CD44 light backgrounds
 
