Modifications sur le collapser, mise en place des atomes de liste, import des fichiers scss dans le ds44.scss

--- a/framework/scss/cd44.scss
+++ b/framework/scss/cd44.scss
@@ -60,3 +60,5 @@
 @import "components/card";
 @import "components/diaporama";
 @import "components/templates.scss";
+@import "components/boxes.scss";
+@import "components/list.scss";
