--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -75,10 +75,12 @@ $ds44-container-hmargin  : 5.5% !default;
 $ds44-portlet-vmargins   : 3rem !default;
 
 $ds44-spacer-std         : 3rem !default;
-$ds44-padding-base       : 3rem !default;
-$ds44-padding-box        : $ds44-padding-base /2 !default;
-$ds44-padding-medium     : $ds44-padding-base /3 !default;
-$ds44-padding-small      : $ds44-padding-base /6 !default;
+$ds44-padding-base       : 1rem !default;
+$ds44-padding-small      : $ds44-padding-base /2 !default;
+$ds44-padding-medium     : $ds44-padding-base !default;
+$ds44-padding-box        : $ds44-padding-base *1.5 !default;
+$ds44-padding-large      : $ds44-padding-base *2 !default;
+$ds44-padding-xlarge     : $ds44-padding-base *3 !default;
 
 
 // ----------
@@ -128,9 +130,9 @@ $ds44-border-radius: 0 !default;
 // Animation zone
 // ---------------
 
-$ds44-timing-standard:  0.25s !default;
-$ds44-timing-slower:    0.35s !default;
-$ds44-timing-x2:        0.5s !default;
-$ds44-timing-x3:        0.75s !default;
-$ds44-timing-x4:        1s !default;
-$ds44-timing-faster:    0.15s !default;
+$ds44-timing-standard : 0.25s !default;
+$ds44-timing-slower   : 0.35s !default;
+$ds44-timing-x2       : 0.5s !default;
+$ds44-timing-x3       : 0.75s !default;
+$ds44-timing-x4       : 1s !default;
+$ds44-timing-faster   : 0.15s !default;
